--- a/assets/sass/dashboard/custom/_variables.scss
+++ b/assets/sass/dashboard/custom/_variables.scss
@@ -377,8 +377,8 @@ $general-transition-time:     300ms             !default;
 
 // Fonts
 
-$font-family-base:            'Poppins', sans-serif !default;
-$font-family-alt:             'Poppins', sans-serif !default;
+$font-family-base:            'Vazir', sans-serif !default;
+$font-family-alt:             'Vazir', sans-serif !default;
 
 $font-size-dash:              .875rem !default;
 
